Separated files. Working IMU over wifi

--- a/apps/qencoder/Makefile
+++ b/apps/qencoder/Makefile
@@ -22,13 +22,11 @@
 
 include $(APPDIR)/Make.defs
 
-PROGNAME = msense
+PROGNAME = qencoder
 PRIORITY = SCHED_PRIORITY_DEFAULT
 STACKSIZE = $(CONFIG_DEFAULT_TASK_STACKSIZE)
-MODULE = $(CONFIG_EXAMPLE_MOTOR_SENSING)
+MODULE = $(CONFIG_EXAMPLE_QENCODER_MOTOR)
 
-#CFLAGS += ${INCDIR_PREFIX}$(APPDIR)/math/kissfft/kissfft
-
-MAINSRC = motor_sensing_main.c
+MAINSRC = qencoder_main.c
 
 include $(APPDIR)/Application.mk
